--- a/angularApp/templates/home.html
+++ b/angularApp/templates/home.html
@@ -1,3 +1,4 @@
+<body>
 <div ng-controller="homeclr">
 	<center><input type="text" ng-model="searchBook" placeholder="Search for Books" style="height: 40px; margin: 0px 31px; padding: 0px 15px;width: 300px;"></input></center>
 	
@@ -10,3 +11,4 @@
 		<tr><p><center><button type="button" class="btn btn-primary" ng-click="profile()">LogIn</button></center></p></tr>
 	</table>	
 </div>
+</body>
