--- a/angularApp/templates/other.html
+++ b/angularApp/templates/other.html
@@ -1,25 +1,25 @@
+<body>
 <div ng-controller="otherclr">
 	<center><h1>Other</h1></center>
-	
+
+<!-- 	
 <table border="1">
 	<tr><td>User Name:</td><td>Parag Chauhan</td></tr>
 	<tr><td>ID:</td><td>201301085</td></tr>
 </table>
-
-
-	
+ -->
 	<h2>See Other Student's Profile</h2>
 			
 	<input type="text" ng-model="searchprofile" placeholder="Enter name or ID" style="height: 40px; margin: 0px 31px; padding: 0px 15px;width: 300px;"></input>
 	<button type="button" class="btn btn-primary" ng-click="searchstudent()">Search</button>
 		
-	<h2>New Arrived Book</h2>
-		
-			<table border="1">
-				<tr><td>ISBN</td><td>Accession Number</td><td>Location</td></tr>
-				<tr><td>100</td><td>1000</td><td>800.20.36</td></tr>
-			</table>
-		
+<!-- 	<h2>New Arrived Book</h2>
+		<table border="1">
+			<tr><td>ISBN</td><td>Accession Number</td><td>Location</td></tr>
+			<tr><td>100</td><td>1000</td><td>800.20.36</td></tr>
+		</table>
+ -->		
 		
 	<center><button type="button" class="btn btn-primary" ng-click="back()">Back</button></center>
 </div>
+</body>
