--- a/angularApp/templates/profile.html
+++ b/angularApp/templates/profile.html
@@ -1,8 +1,9 @@
+<body>
 <div ng-controller="profileclr as p1" >
 <h1><center>Profile</center></h1>
 <table border="1">
 		<tr><td>User Name:</td><td>Parag Chauhan</td></tr>
-		<tr><td>ID:</td><td>201301085</td></tr>
+		<tr><td>ID:</td><td>{{userid}}</td></tr>
 </table>
 
 <!-- 	<h2>Search Book:</h2><input type="text" ng-model="searchBook" placeholder="Search for Books" style="height: 40px; margin: 0px 31px; padding: 0px 15px;width: 300px;">
@@ -11,10 +12,9 @@
 <table>
 	<tbody>
 	<h2>Issued Book History</h2>
-			
 	<table border="1">
 		<tr><td>ISBN</td><td>Accession Number</td><td>UniqueID</td><td>DoI</td><td>DoExR</td><td>DoR</td></tr>
-			<tr ng-repeat = "book1 in booklist | filter:'201301001'" >
+			<tr ng-repeat = "book1 in booklist | filter: userid " >
 				<td> {{book1.ISBN}} </td>
 				<td> {{book1.accessionNumber}} </td>
 				<td> {{book1.UniqueId}} </td>
@@ -22,8 +22,6 @@
 				<td> {{book1.DoExR}} </td>
 				<td> {{book1.DoR}} </td>
 			</tr>
-		
-			
 	</table>
 	
 	<br></br>
@@ -36,3 +34,4 @@
 	</tbody>
 </table>
 </div>
+</body>
