--- a/angularApp/templates/requestbook.html
+++ b/angularApp/templates/requestbook.html
@@ -1,10 +1,17 @@
 <body>
 <div ng-controller="requestbookclr">
 <h1><center>Request book</center></h1>
-		<table>
+		<table ng-init="isbn = book.volumeInfo.industryIdentifiers[0].identifier;
+						title = book.volumeInfo.title;
+						publisher = book.volumeInfo.publisher">
 			<tr>
 				<td> <label> UniqueId </label> </td>
 				<td> {{userid}} </td>
+			</tr>
+			
+			<tr>
+				<td><label>Book Name</label></td>
+				<td><input type="text" ng-model="title" placeholder="Enter Book Name" required></td>
 			</tr>
 
 			<tr>
