--- a/angulaApp/css/materialize.css
+++ b/angulaApp/css/materialize.css
@@ -5529,7 +5529,7 @@ input[type=tel],
 input[type=number],
 input[type=search],
 textarea.materialize-textarea {
-  background-color: transparent;
+  background-color: #0d5995;
   border: none;
   border-bottom: 1px solid #9e9e9e;
   border-radius: 0;
