--- a/angulaApp/css/materialize.css
+++ b/angulaApp/css/materialize.css
@@ -5856,7 +5856,7 @@ textarea.materialize-textarea + label:after {
 
 /* Search Field */
 .input-field input[type=search] {
-  display: block;
+  display: inline-block;
   line-height: inherit;
   padding-left: 4rem;
   width: calc(100% - 4rem);
